--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: we_slide
 description: A Flutter package which implements a backdrop displaying contextual and actionable content. =]
-version: 1.0.3
+version: 2.0.0
 homepage: https://github.com/luciano-work/we_slide
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
@@ -13,5 +13,5 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  effective_dart: ^1.2.0
+  effective_dart: ^1.3.0
 flutter:
