--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: we_slide
 description: A Flutter package which implements a backdrop displaying contextual and actionable content. =]
-version: 2.2.1
+version: 2.3.0
 homepage: https://github.com/luciano-work/we_slide
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
